Add title screen

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>Systems Offline</title>
-    <link rel="stylesheet" href="./style.css">
+    <style>
+      body {
+        background: black;
+      }
+
+      canvas {
+        display: block;
+        margin: 0 auto;
+      }
+    </style>
   </head>
   <body>
     <script src="build/index.js"></script>
