--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <title>Systems Offline</title>
+    <title>Gib</title>
     <style>
       body {
         background: black;
